UX-106 Fix Combobox item vertical alignment

--- a/packages/matchbox/src/components/ComboBox/ComboBoxTextField.module.scss
+++ b/packages/matchbox/src/components/ComboBox/ComboBoxTextField.module.scss
@@ -45,6 +45,7 @@
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
 
   padding: rem(2) rem(6);
 
